# Lyrix

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: error-handling.md  examples.md  todo.md
src/: lib.rs  logger.rs  lyrix.rs  smtc_lyrics.rs  ws_client.rs
src/error/: mod.rs
src/error/fetcher/: auth.rs  http.rs  mod.rs
src/error/general/: mod.rs
src/error/parser/: decrypt.rs  lyrics_parse.rs  mod.rs  parse.rs  totp_gen.rs
src/error/provider/: json.rs  mod.rs  proxy.rs
src/error/searcher/: mod.rs
src/fetchers/: applemusic.rs  base_api.rs  kugou.rs  mod.rs  netease.rs  proxy.rs  qqmusic.rs  soda_music.rs  spotify.rs
src/files/: mod.rs  qqmusic.rs
src/models/: file_info.rs  line_info.rs  lyrics_types.rs  mod.rs  music_player.rs  session.rs  sync_types.rs  track_metadata.rs
src/parsers/: applemusic.rs  kugou.rs  lrc.rs  mod.rs  netease.rs  qqmusic.rs  qrc.rs  soda_music.rs  spotify.rs  yrc.rs
src/parsers/decrypt/: krc.rs  mod.rs  netease.rs  qrc.rs
src/parsers/generate/: spotify.rs
src/providers/: applemusic.rs  base_api.rs  kugou.rs  lyrics_provider.rs  mod.rs  moekoe.rs  netease.rs  providers.rs  qqmusic.rs  soda_music.rs  spotify.rs
src/readers/: mod.rs  qqmusic.rs  readers.rs
src/searchers/: applemusic.rs  kugou.rs  mod.rs  netease.rs  qqmusic.rs  soda_music.rs  spotify.rs
tests/: test_Lyrix.rs  test_smtc_lyrics.rs  track.json  unit_tests.rs
tests/unit_tests/error/: mod.rs
tests/unit_tests/error/fetcher/: mod.rs  (+4 more)
tests/unit_tests/files/: mod.rs  test_qqmusic.rs
tests/unit_tests/parsers/: mod.rs  test_applemusic.rs  test_decrypt.rs  test_generate.rs  test_iparsers.rs  test_kugou.rs  test_lrc.rs  test_netease.rs  test_qqmusic.rs  test_soda_music.rs  test_spotify.rs
tests/unit_tests/readers/: test_qqmusic.rs
tests/unit_tests/searchers/: mod.rs  test_apple_compare.rs  test_clean_title.rs  test_compare_track.rs  test_make_search_string.rs
(+12 files in other folders)
