[package]
name = "lyrix"
version = "26.9.0"
edition = "2021"
description = "High-performance lyrics tool"
license = "Apache-2.0"
repository = "https://github.com/cXp1r/Lyrix"
exclude = ["tests/"]

[dev-dependencies]
dialoguer = "0.11"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "form"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
async-trait = "0.1"
urlencoding = "2"
base64 = "0.22"
flate2 = "1"

memchr = "2"
thiserror = "2"


aes = "0.8"
ecb = { version = "0.1", features = ["alloc"] }
md5 = "0.7"
hex = "0.4"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
futures-util = { version = "0.3.32", features = ["sink"] }
